--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <title>My Blog</title>
   <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+  <link href="styleSheet.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
