--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>My Blog</title>
   <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
-  <link href="styleSheet.css" rel="stylesheet" type="text/css">
+  <link href="stylesheet.css" rel="stylesheet" type="text/css">
 
 </head>
 
