--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- header start -->
   <div id="header" class="section">
-    <img alt="" class="img-circle" src="https://media.licdn.com/dms/image/C5103AQGWINjwkJtMug/profile-displayphoto-shrink_200_200/0?e=1568246400&v=beta&t=HICpMZ2iTj2zenkgh2jwcDG9C-2Q7JRKEOIPZHIvCQ0">
+    <img alt="" class="img-circle" src="https://avatars.githubusercontent.com/u/9510318?v=4">
     <p>Benita Huang</p>
   </div>
   <!-- header end -->
