--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html>
 
 <head>
-  <title>My Blog</title>
-  <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+  <title>Self Intro</title>
+  <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
   <link href="stylesheet.css" rel="stylesheet" type="text/css">
-
 </head>
 
 <body>
   <!-- header start -->
   <div id="header" class="section">
-    <img alt="" class="img-circle" src="https://avatars.githubusercontent.com/u/9510318?v=4">
-    <p>Benita Huang</p>
+    <img alt="" class="img-circle" src="https://avatars.githubusercontent.com/u/9510318?v=4" title="Benita~">
+    <p>BH</p>
   </div>
   <!-- header end -->
 
@@ -20,75 +19,13 @@
   <div class="section">
     <h1><span>About Me</span></h1>
     <p>
-      Hey! I'm <strong>Benita</strong>.Learning to code gave me <i>problem-solving skills</i> and a way to communicate with others on a technical level.</p>
+      Hey! I'm <strong>BH</strong>. Learning to code gave me <i>problem-solving skills</i> and a way to communicate with others on a technical level.</p>
     <p class="quote">"Get_1% better per day!"</p>
   </div>
   <!-- About Me section end -->
 
   <!-- My Schedule section start -->
-  <div class="section">
-    <h1><span>My Coding Schedule</span></h1>
-    <table>
-      <tr>
-        <th>Day</th>
-        <th>Mon</th>
-        <th>Tue</th>
-        <th>Wed</th>
-        <th>Thu</th>
-        <th>Fri</th>
-        <th>Sat</th>
-      </tr>
-      <tr>
-        <td>13-18:30</td>
-        <td class="selected">CS50</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>14-17:30</td>
-        <td></td>
-        <td class="selected">Sololearn</td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>19-22</td>
-        <td></td>
-        <td></td>
-        <td class="selected">Javascript</td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>19-22</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td class="selected">Udacity</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>14-17:30</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td class="selected">Meetup</td>
-      </tr>
-       <tr>
-        <td>13-17:30</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td class="selected">Javascript</td>
-      </tr>
-    </table>
-  </div>
+
   <!-- My Schedule section end -->
 
   <!-- My Skills section start -->
@@ -96,7 +33,7 @@
 Advanced Progress bar usage
 https://dotblogs.com.tw/brooke/2017/07/13/160751-->
   <div class="section">
-    <h1><span>My Skills</span></h1>
+    <h1><span>Tech Skills</span></h1>
     <ul>
       <li>HTML5 <br />
         <progress min="0" max="100" value="95"></progress>
@@ -104,15 +41,29 @@ https://dotblogs.com.tw/brooke/2017/07/13/160751-->
       <li>CSS3 <br />
         <progress min="0" max="100" value="70"></progress>
       </li>
-
-      <li>JavaScript <br />
-        <progress min="0" max="100" value="40"></progress>
-      </li>
-       <li>MySQL <br />
+      <li>SQL <br />
         <progress min="0" max="100" value="20"></progress>
       </li>
-      <li>Python <br />
+      <li>JavaScript <br />
         <progress min="0" max="100" value="10"></progress>
+      </li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h1><span>Product Skills</span></h1>
+    <ul>
+      <li>Proudct Management<br />
+        <progress min="0" max="100" value="95"></progress>
+      </li>
+      <li>Project Management <br />
+        <progress min="0" max="100" value="88"></progress>
+      </li>
+      <li>Proudct Vision<br />
+        <progress min="0" max="100" value="80"></progress>
+      </li>
+      <li>Proudct Strategy <br />
+        <progress min="0" max="100" value="90"></progress>
       </li>
     </ul>
   </div>
@@ -120,21 +71,19 @@ https://dotblogs.com.tw/brooke/2017/07/13/160751-->
 
   <!-- Form section start -->
   <div class="section">
-    <h1><span>Contact Me</span></h1>
-
     <svg class="face" height="100" width="100">
-                <circle cx="50" cy="50" r="50" fill="#FDD835"/>
-                <circle cx="30" cy="30" r="10" fill="#FFFFFF"/>
-                <circle cx="70" cy="30" r="10" fill="#FFFFFF"/>
-                <circle cx="30" cy="30" r="5" fill="#000000"/>
-                <circle cx="70" cy="30" r="5" fill="#000000"/>
-                <path d="M 30 70 q 20 20 40 0" stroke="#FFFFFF" stroke-width="5" fill="none" />
-            </svg>
-
+      <circle cx="50" cy="50" r="50" fill="#FDD835" />
+      <circle cx="30" cy="30" r="10" fill="#FFFFFF" />
+      <circle cx="70" cy="30" r="10" fill="#FFFFFF" />
+      <circle cx="30" cy="30" r="5" fill="#000000" />
+      <circle cx="70" cy="30" r="5" fill="#000000" />
+      <path d="M 30 70 q 20 20 40 0" stroke="#FFFFFF" stroke-width="5" fill="none" />
+    </svg>
+    <h1><span>Contact Me</span></h1>
     <form>
-      <input name="name" placeholder="Name" type="text" required /><br/>
-      <input name="email" placeholder="Email" type="email" required /><br/>
-      <textarea name="message" placeholder="Message" required></textarea>
+      <input name="name" placeholder="Name" type="text" required /><br />
+      <input name="email" placeholder="Email" type="email" required /><br />
+      <textarea name="message" placeholder="Leave your message here" required></textarea>
       <input type="submit" value="SEND" class="submit" />
     </form>
   </div>
@@ -144,23 +93,22 @@ https://dotblogs.com.tw/brooke/2017/07/13/160751-->
   <div class="section" id="contacts">
     <h1><span>Follow Me</span></h1>
     <div>
-      <a href="https://github.com/chipy1209" target="_blank">
-                    <img alt="Github"" src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/github_circle_black-512.png" />
-                </a>
-      <a href="https://www.linkedin.com/in/benitahuang/?originalSubdomain=tw">
-                    <img alt="Linkedin" src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/linkedin_circle-512.png"/>
-                </a>
-      <a href="https://benitasays.blogspot.com/?m=1">
-                    <img alt="Blogspot" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTFCJlmcf7EJF7tjiNwfXXmlT_f1K7I6cf8yu2OUVVsgDbLhQ4t" />
-                </a>
+      <a href="https://github.com/chipy1209" target="_blank"><img alt="Github"" src=" https://cdn3.iconfinder.com/data/icons/free-social-icons/67/github_circle_black-512.png" />
+      </a>
+      <a href="" title=""><img alt="Linkedin" src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/linkedin_circle-512.png" />
+      </a>
+      <a href="">
+        <img alt="Blogspot" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTFCJlmcf7EJF7tjiNwfXXmlT_f1K7I6cf8yu2OUVVsgDbLhQ4t" />
+      </a>
     </div>
   </div>
+        
   <!-- Contacts section end -->
 
   <div class="copyright">
-    &copy; 2019 Benita. All rights reserved.
+    &copy; 2022 BH. All rights reserved.
   </div>
-
+  <!-- <!https://codepen.io/benita/pen/RvOKyv>
+ https://codepen.io/benita/pen/rXpVMO -->
 </body>
-
 </html>
